--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,13 @@
 {
     "require": {
-        "phpunit/phpunit": "^8.2"
+        "phpspec/phpspec": "^5.1"
     },
-	"autoload":{
-		"psr-4":{
-			"App\\":"app"
-		}
-	}
+    "config": {
+        "bin-dir": "bin"
+    },
+    "autoload": {
+        "psr-0": {
+            "": "src/"
+        }
+    }
 }
